--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+
+.container{
+    max-width: 1000px;
+    margin: 30px auto;
+    overflow: auto;
+    min-height: 500px;
+    border: 1px solid orange;
+    border-radius: 5px
+}
